# project_template

./: .cirrus.yml  .clang-format  .clang-tidy  .clangd  CMakeLists.txt  LICENSE.md  README.md  conanfile.py  find_cmake_package_name.py  local_ci.sh
.github/workflows/: project-template-ci.yml
cmake/: FindClangTidy.cmake  FindCodeCoverage.cmake  FindLibCXX.cmake  FindSanitizer.cmake  add_basic_project_implementation.cmake  add_build_targets.cmake  basic_project-add-targets-impl.cmake  basic_project-add-targets.cmake  basic_project-clang-tidy.cmake  basic_project-install.cmake  basic_project-options.cmake  basic_project-packages.cmake  basic_project-utility.cmake  build.cmake  enable-clang-tidy.cmake  enable-iwyu.cmake  enable-sanitisers.cmake  options.cmake  project_template-add-targets-impl.cmake  project_template-add-targets.cmake  project_template-install.cmake  project_template-packages.cmake  project_template-utility.cmake
conan/: remotes.txt
conan/config/: clang
config/cmake/: packages.cmake
config/cmake/toolchains/: clang_libcxx.cmake  clang_libstdcxx.cmake  gcc_libstdcxx.cmake
config/conan/: remotes.txt
config/conan/profiles/: clang-4-libcxx-msan  clang-5-libcxx-msan  clang-6-libcxx-msan  clang-7-libcxx-msan  clang-8-libcxx-msan
config/hooks/: clang-format.sh
config/scripts/: build-configure.sh  build.sh  conan-install.sh  pre-install.sh  test.sh
config/vcpkg/: clang_libcxx.cmake  clang_libstdcxx.cmake  gcc_libstdcxx.cmake
doc/: building-targets.md  cmake-options.md  configuring-ci.md  project-structure.md  supported-toolchains.md  third-party-libraries.md
docs/source/: conf.py  index.rst
include/amcpp/: io.hpp
source/: CMakeLists.txt
test/: CMakeLists.txt  greeting_test.cpp
test/regression/: CMakeLists.txt
test/regression/clang-tidy/: -cert-dcl59-cpp.cpp  -google-build-namespaces.cpp  -readability-uppercase-literal-suffix.cpp  CMakeLists.txt  google-build-namespaces.hpp
